<resources>
    <string name="app_name">FolderGenie</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="action_permissions">Grant permissions</string>
    <string name="action_generate_test_files">Generate test files</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_about">About</string>
    <string name="action_sort_presets">Sort presets</string>
    <string name="fragment_label_sort_options">Sort options</string>
    <string name="fragment_label_operation_progress">Operation progress</string>
    <string name="action_help">Help</string>
    <string name="action_flatten_dir_tree">Flatten folder tree</string>
    <string name="action_preset_all_split">All split</string>
    <string name="action_clear_empty_dirs">Clear empty folders</string>
    <string name="label_select_folder">Select folder</string>
    <string name="action_browse">Browse</string>
    <string name="action_check_sort_parameters">Confirm sort options</string>
    <string name="action_save_sort_preset">Save sort preset</string>
    <string name="label_sort_info">Choose your sort options and confirm them. Then begin the sort
        operation based on the displayed options or save them as a preset.\n\nRead the \'Help\' dialog in the overflow menu for more info.</string>
    <string name="action_stop_operation">Stop operation</string>
    <string name="action_back">Back</string>
    <string name="action_begin_sort_operation">Begin sort</string>
    <string name="label_operation_in_progress">Operation in progress..</string>
</resources>