<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dyejeekis.foldergenie.activity.MainActivity">

    <group
        android:id="@+id/group_menu_main">
        <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:title="@string/action_settings"
            app:showAsAction="never"
            android:visible="false"/>
        <item
            android:id="@+id/action_grant_permissions"
            android:orderInCategory="110"
            android:title="@string/action_permissions"
            app:showAsAction="never"
            android:visible="true"/>
        <item
            android:id="@+id/action_generate_test_files"
            android:orderInCategory="120"
            android:title="@string/action_generate_test_files"
            app:showAsAction="never"
            android:visible="true"/>
        <item
            android:id="@+id/action_flatten_dir_tree"
            android:orderInCategory="125"
            android:title="@string/action_flatten_dir_tree"
            app:showAsAction="never"
            android:visible="true"/>
        <item
            android:id="@+id/action_clear_empty_dirs"
            android:orderInCategory="128"
            android:title="@string/action_clear_empty_dirs"
            app:showAsAction="never"
            android:visible="true"/>
        <item
            android:id="@+id/action_sort_presets"
            android:orderInCategory="130"
            android:title="@string/action_sort_presets"
            app:showAsAction="never"
            android:visible="true"/>
        <item
            android:id="@+id/action_help"
            android:orderInCategory="140"
            android:title="@string/action_help"
            app:showAsAction="never"
            android:visible="true"/>
        <item
            android:id="@+id/action_about"
            android:orderInCategory="150"
            android:title="@string/action_about"
            app:showAsAction="never"
            android:visible="false"/>
    </group>
</menu>