<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    tools:context=".fragment.VerboseSortOptionsFragment">

    <LinearLayout
        android:id="@+id/layout_options"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_begin_sort">

        <TextView
            android:id="@+id/textView_selected_dir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_select_folder"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button_browse_directories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_browse" />

        <EditText
            android:id="@+id/editText_file_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="file group"
            android:inputType="text" />

        <EditText
            android:id="@+id/editText_sort_method"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="sort methods"
            android:inputType="text" />

        <Button
            android:id="@+id/button_check_sort_parameters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_check_sort_parameters" />

        <Button
            android:id="@+id/button_save_sort_preset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_save_sort_preset" />

        <TextView
            android:id="@+id/textView_sort_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:text="@string/label_sort_info"
            android:textSize="18sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button_begin_sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_begin_sort_operation"
        app:layout_constraintTop_toBottomOf="@id/layout_options"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>